--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@ngrx/store": "^17.1.0",
     "@nx/angular": "17.2.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
